[package]
name = "scrape_militariamart"
version = "0.1.0"
edition = "2024"

[dependencies]
scrape = { git = "https://github.com/blitzfilter/scrape", rev = "6539089e86dc3ffe2f45d98fc679f95726fa8a3f" }

reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
scraper = { version = "0.23.1" }
async-trait = "0.1.88"


[lib]
name = "scrape_militariamart"
path = "src/lib.rs"

[[bin]]
name = "scrape_militariamart"
path = "src/main.rs"