[package]
name = "scrape-militariamart"
version = "0.1.0"
edition = "2024"

[dependencies]
scrape = { git = "https://github.com/blitzfilter/scrape", branch = "main" }
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.23.1" }
async-trait = "0.1.88"
lambda_runtime = "0.13.0"
aws-config = "1.6.2"
aws-sdk-sqs = "1.65.0"
aws-sdk-dynamodb = "1.79.0"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
dotenvy = "0.15.7"

[dev-dependencies]
